--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Data Cloning
 description: Hierarchical model made easy
-url:  http://localhost:4000
-#url: http://datacloning.github.io
+#url:  http://localhost:4000
+url: http://datacloning.github.io
 #permalink:   /:categories/:title.html
 #category: news
 
