--- a/_config.yml
+++ b/_config.yml
@@ -15,4 +15,4 @@ kramdown:
   input: GFM
 
 encoding:     "utf-8"
-markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+markdown_ext: "markdown,mkdown,mkdn,mkd,md,Rmd"
