--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@ include: [".htaccess"]
 exclude: ["README.md","LICENSE.md"]
 timezone:    America/Edmonton
 
-highlighter: pygments
+#highlighter: pygments
 markdown: kramdown
-#kramdown:
-#  input: GFM
+kramdown:
+  input: GFM
 
 encoding:     "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md,Rmd"
