--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Data Cloning
 description: Hierarchical model made easy
 
-#url:  http://localhost:4000
-url: http://datacloning.github.io
+#baseurl:  http://localhost:4000
+baseurl: http://datacloning.github.io
 
 include: [".htaccess"]
 exclude: ["README.md","LICENSE.md"]
