try bootswatch can

--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,6 @@ kramdown:
   input:          GFM
   hard_wrap:      false
 markdown_ext: "markdown,mkdown,mkdn,mkd,md,Rmd"
+
+theme: flatly
+fancy: true
