--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,6 @@ markdown_ext: "markdown,mkdown,mkdn,mkd,md,Rmd"
 # Bootswatch theme
 theme: flatly
 # fancy fonts on/off
-fancy: true
+fancyfonts: true
 # navbar style: inverse, transparent
 navbar: inverse
