--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,9 @@ theme: flatly
 fancyfonts: true
 # navbar style: inverse, transparent
 navbar: inverse
+
+tags:
+  - Announcement
+  - Programming
+  - Opinion
+  - Example
