--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Data Cloning
-description: Hierarchical model made easy
+description: Hierarchical models made easy
 
 #baseurl:  http://localhost:4000
 baseurl: http://datacloning.org
