--- a/_config.yml
+++ b/_config.yml
@@ -24,3 +24,5 @@ fancyfonts: true
 navbar: inverse
 
 disqus: datacloning
+
+author: '<a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>'
