--- a/_config.yml
+++ b/_config.yml
@@ -26,3 +26,6 @@ navbar: inverse
 disqus: datacloning
 
 author: '<a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>'
+
+gems:
+  - jekyll-feed
