--- a/_config.yml
+++ b/_config.yml
@@ -27,5 +27,7 @@ disqus: datacloning
 
 author: '<a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>'
 
+ads: true
+
 gems:
   - jekyll-feed
