--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ kramdown:
 markdown_ext: "markdown,mkdown,mkdn,mkd,md,Rmd"
 
 # Bootswatch theme
-theme: flatly
+bswtheme: flatly
 # fancy fonts on/off
 fancyfonts: true
 # navbar style: inverse, transparent
