--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Data Cloning
 description: Hierarchical models made easy
 
 #baseurl:  http://localhost:4000
-baseurl: http://datacloning.org
+baseurl: https://datacloning.org
 #baseurl: http://datacloning.github.io
 
 include: [".htaccess"]
